# Superstore-Marketing-Campaign

./: README.md  hello.py  pyproject.toml
data/clean/: cleaned_superstore_data.csv
notebooks/: superstore_ML.ipynb  superstore_eda.ipynb
notebooks/.ipynb_checkpoints/: superstore_ML-checkpoint.ipynb
slides/: Superstore Marketing Campaign.pptx
